--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ margin: 3rem;
   font-weight: 900;
 font-style: normal;
 font-size: 3rem;
-margin-bottom: 7rem;
+margin-bottom: 5rem;
 
 }
 
@@ -67,8 +67,9 @@ font-weight: 900;
 font-style: normal;
 font-size: 1.1rem;
 writing-mode: vertical-rl;
-text-align: top;
+text-align: start;
 letter-spacing: 3px;
+
 }
 
 .container {
@@ -154,7 +155,7 @@ mark {
     table-layout: fixed;
     max-height: 100%;
     max-width: 100%;
-    overflow: hidden;
+    
 }
 
 .table-a {
@@ -392,7 +393,6 @@ font-weight: 700;
 font-style: normal;
 }
 
-@media screen and (max-width: 704px) {
 
 @media only screen and (max-width: 600px) {
    html {
@@ -401,23 +401,42 @@ font-style: normal;
    
    body {
        padding: 1rem;
+       font-size: 0.6rem;
    }
    
    h1 {
-       font-size: 2rem;
+       font-size: 3.5rem;
        margin: 1.5rem;
-       margin-bottom: 3rem;
+       margin-bottom: 2rem;
        text-align: center;
    }
    
    .contentsblock {
        margin: 2rem 1rem;
    }
+
+      .mobile-wrapper {
+      width: 100%;
+       display: flex;
+        align-items: flex-start; /* center 대신 flex-start 사용 */
+        justify-content: center;
+        gap: 52px;
+   }
    
    .contents {
-       font-size: 1rem;
-       letter-spacing: 2px;
-       writing-mode: ;
+       font-size: 1.2rem;
+       letter-spacing: 1px;
+       display: inline-block;
+       justify-content: center;
+       margin-bottom: 3rem;
+       letter-spacing: 3px;
+      text-align: start; /* 위쪽 정렬을 위해 start 사용 */
+        vertical-align: top; /* 수직 정렬도 위쪽으로 */
+
+   }
+
+   mark {
+    border: 0.5px solid black;
    }
    
    .container {
@@ -425,9 +444,10 @@ font-style: normal;
        top: auto;
        left: auto;
        transform: none;
-       width: 33rem;
-       height: 55rem;
+       width: 28rem;
+       height: 50rem;
        margin: 1rem auto;
+       margin-bottom: 7rem;
    }
    
    .verticalbox {
@@ -447,14 +467,28 @@ font-style: normal;
        line-height: 18px;
        letter-spacing: 1px;
    }
+
+   .blacktitle {
+       font-size: 0.9rem;
+       letter-spacing: 2px;
+   }
+
+ .left  {
+    overflow: hidden;
+   }
+
+   .verticaltext {
+    font-size: 0.52rem;
+    text-align: center;
+  }
    
    .container-card {
        position: relative;
        top: auto;
        left: auto;
        transform: none;
-       width: 90vw;
-       height: 60vw;
+       width: 23rem;
+       height: 12.2rem;
        max-height: 240px;
        margin: 2rem auto;
    }
@@ -474,6 +508,10 @@ font-style: normal;
    .cardlogo {
        margin: 0.8rem;
        font-size: 1.2rem;
+   }
+
+   .mobile-hidden {
+    display: none;
    }
 }
 
