--- a/style.css
+++ b/style.css
@@ -406,23 +406,26 @@ font-style: normal;
    body {
        padding: 1rem;
        font-size: 0.6rem;
+       overflow-x: hidden;
+       width: 100%;
    }
    
    h1 {
        font-size: 3.5rem;
        margin: 1.5rem;
-       margin-bottom: 4rem;
+       margin-bottom: 2rem;
        text-align: center;
    }
 
    .logo-img {
-  height: 3.2rem;
-  width: 3.2rem;  /* 이 부분이 auto에서 3rem으로 변경됨 */
-margin: 0 auto;
-}
+       height: 3.5rem;
+       width: 3.5rem;
+       margin: 0 auto;
+       object-fit: contain;
+   }
    
    .contentsblock {
-       margin: 2rem 1rem;
+       margin: 2rem 0;
    }
 
       .mobile-wrapper {
@@ -436,15 +439,14 @@ margin: 0 auto;
    }
    
    .contents {
-       font-size: 1rem;
+       font-size: 1.2rem;
        letter-spacing: 1px;
        display: inline-block;
        justify-content: center;
        margin-bottom: 3rem;
        letter-spacing: 3px;
-      text-align: center; /* 위쪽 정렬을 위해 start 사용 */
-        vertical-align: middle; /* 수직 정렬도 위쪽으로 */
-
+       text-align: center;
+       vertical-align: middle;
    }
 
    mark {
@@ -527,5 +529,4 @@ margin: 0 auto;
     display: none;
    }
 }
-
 
