--- a/style.css
+++ b/style.css
@@ -445,6 +445,8 @@ font-style: normal;
 }
    
    .contents {
+	   
+  font-family: Pretendard, system-ui, -apple-system, Segoe UI, Roboto, Noto Sans, Arial, sans-serif !important;
        font-size: 1.2rem;
        letter-spacing: 1px;
        display: inline-block;
