--- a/style.css
+++ b/style.css
@@ -536,5 +536,17 @@ font-style: normal;
    .mobile-hidden {
     display: none;
    }
+  
+  .left,
+.right,
+.rightbottom,
+.bottom-left-wrapper,
+.leftbottom,
+.leftbottom2 {
+  box-sizing: border-box;
+  max-width: 100%;
+  max-height: 100%;
+  overflow: hidden;
+}
 }
 
