--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ font-style: normal;
   -webkit-user-select: none; /* 사파리/크롬용 */
   -moz-user-select: none;    /* 파이어폭스용 */
   -ms-user-select: none;     /* IE/Edge용 */
+  overflow: hidden;          /* 전체 body 스크롤 방지 */
 }
 
 h1 {
@@ -50,13 +51,33 @@ margin: 3rem;
 font-style: normal;
 font-size: 3rem;
 margin-bottom: 8rem;
-
+position: fixed;
+top: 0;
+left: 0;
+z-index: 1000;
+background-color: var(--color-2);
+width: 100%;
 }
 
 .contentsblock {
 margin: 5rem;
-margin-left: 3rem
+margin-left: 3rem;
+position: fixed;
+top: 12rem;
+left: 0;
+height: calc(100vh - 12rem);
+overflow-y: auto;
+overflow-x: hidden;
+z-index: 999;
+}
 
+/* 스크롤바 숨기기 (선택사항) */
+.contentsblock::-webkit-scrollbar {
+  display: none;
+}
+.contentsblock {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 .logo-img {
@@ -93,7 +114,7 @@ mark {
   background-color: var(--color-3);
   border: 1px solid black;
 display: inline-block;   
-    padding: 3rem 0rem;
+    padding: 3.5rem 0rem;
 
 }
 
@@ -412,6 +433,17 @@ font-style: normal;
        overflow-x: hidden;
        width: 100%;
        overflow-y: auto;
+       overflow: auto; /* 모바일에서는 전체 스크롤 허용 */
+   }
+
+   /* 폰트 로딩 중에도 레이아웃 유지 */
+   html.wf-loading body {
+       visibility: hidden;
+   }
+   
+   html.wf-active body,
+   html.wf-inactive body {
+       visibility: visible;
    }
    
    h1 {
@@ -419,6 +451,9 @@ font-style: normal;
        margin: 1.5rem;
        margin-bottom: 2rem;
        text-align: center;
+       position: relative; /* 모바일에서는 fixed 해제 */
+       width: auto;
+       background-color: transparent;
    }
 
    .logo-img {
@@ -427,9 +462,14 @@ font-style: normal;
        margin: 0 auto;
        object-fit: contain;
    }
-   
+
    .contentsblock {
        margin: 2rem 0;
+       position: relative; /* 모바일에서는 fixed 해제 */
+       top: auto;
+       left: auto;
+       height: auto;
+       overflow: visible;
    }
 
   .mobile-wrapper {
@@ -491,10 +531,12 @@ font-style: normal;
    .table-a, .table-b, .table-c {
        height: 100%;
        width: 100%;
+       table-layout: fixed;
    }
    
    .table-a td, .table-b td, .table-c td {
        overflow: hidden;
+       word-break: break-all;
    }
    
    table, tr, td, th {
@@ -510,6 +552,9 @@ font-style: normal;
        line-height: 16px;
        letter-spacing: 0.8px;
        font-size: 0.85rem;
+       width: 100%;
+       height: 100%;
+       word-break: keep-all;
    }
 
    .blacktitle {
@@ -574,10 +619,20 @@ font-style: normal;
     display: none;
    }
 
-	html.wf-loading .mobile-wrapper { 
-  visibility: hidden; 
-}
-html.wf-active .mobile-wrapper { 
-  visibility: visible; 
-}
+   /* 폰트 로딩 전에 레이아웃 깨짐 방지 */
+   html.wf-loading .container { 
+       visibility: hidden; 
+   }
+   html.wf-active .container,
+   html.wf-inactive .container { 
+       visibility: visible; 
+   }
+
+   html.wf-loading .mobile-wrapper { 
+       visibility: hidden; 
+   }
+   html.wf-active .mobile-wrapper,
+   html.wf-inactive .mobile-wrapper { 
+       visibility: visible; 
+   }
 }
