--- a/style.css
+++ b/style.css
@@ -41,7 +41,32 @@ font-style: normal;
   -webkit-user-select: none; /* 사파리/크롬용 */
   -moz-user-select: none;    /* 파이어폭스용 */
   -ms-user-select: none;     /* IE/Edge용 */
-  overflow: hidden;          /* 전체 body 스크롤 방지 */
+  overflow: hidden;
+}
+
+.navigation-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+  z-index: 10;
+  pointer-events: none;
+}
+
+.navigation-wrapper > * {
+  pointer-events: auto;
+}
+
+/* 스크롤바 숨기기 */
+.navigation-wrapper::-webkit-scrollbar {
+  display: none;
+}
+.navigation-wrapper {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 h1 {
@@ -51,33 +76,11 @@ margin: 3rem;
 font-style: normal;
 font-size: 3rem;
 margin-bottom: 8rem;
-position: fixed;
-top: 0;
-left: 0;
-z-index: 1000;
-background-color: var(--color-2);
-width: 100%;
 }
 
 .contentsblock {
 margin: 5rem;
-margin-left: 3rem;
-position: fixed;
-top: 12rem;
-left: 0;
-height: calc(100vh - 12rem);
-overflow-y: auto;
-overflow-x: hidden;
-z-index: 999;
-}
-
-/* 스크롤바 숨기기 (선택사항) */
-.contentsblock::-webkit-scrollbar {
-  display: none;
-}
-.contentsblock {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
+margin-left: 3rem
 }
 
 .logo-img {
@@ -114,7 +117,7 @@ mark {
   background-color: var(--color-3);
   border: 1px solid black;
 display: inline-block;   
-    padding:  4.5rem 0rem;
+    padding: 3.5rem 0rem;
 
 }
 
@@ -433,7 +436,13 @@ font-style: normal;
        overflow-x: hidden;
        width: 100%;
        overflow-y: auto;
-       overflow: auto; /* 모바일에서는 전체 스크롤 허용 */
+       overflow: auto;
+   }
+
+   .navigation-wrapper {
+       position: relative;
+       height: auto;
+       overflow: visible;
    }
 
    /* 폰트 로딩 중에도 레이아웃 유지 */
@@ -451,9 +460,6 @@ font-style: normal;
        margin: 1.5rem;
        margin-bottom: 2rem;
        text-align: center;
-       position: relative; /* 모바일에서는 fixed 해제 */
-       width: auto;
-       background-color: transparent;
    }
 
    .logo-img {
@@ -462,14 +468,9 @@ font-style: normal;
        margin: 0 auto;
        object-fit: contain;
    }
-
+   
    .contentsblock {
        margin: 2rem 0;
-       position: relative; /* 모바일에서는 fixed 해제 */
-       top: auto;
-       left: auto;
-       height: auto;
-       overflow: visible;
    }
 
   .mobile-wrapper {
