--- a/style.css
+++ b/style.css
@@ -506,37 +506,94 @@ font-style: normal;
        top: auto;
        left: auto;
        transform: none;
-       width: 100%;
-       max-width: 28rem;
-       height: auto;
-       min-height: 48rem;
+       width: 100vw;
+       max-width: 100vw;
+       height: 100vw * 1.7143; /* 28:48 비율 유지 */
+       max-height: calc(100vw * 1.7143);
        margin: 1rem auto;
        margin-bottom: 7rem;
+       display: grid;
+       grid-template-columns: 50% 50%;
+       grid-template-rows: 50% 50%;
+       padding: 0;
    }
    
-   .left, .right, .bottom-left-wrapper, .rightbottom {
-       height: 50%;
-       width: 50%;
+   .left {
+       grid-column: 1;
+       grid-row: 1;
+       height: 100%;
+       width: 100%;
+       position: relative;
+       display: flex;
+   }
+
+   .left > .table-a {
+       flex: 1;
+   }
+
+   .right {
+       grid-column: 2;
+       grid-row: 1;
+       height: 100%;
+       width: 100%;
+       position: relative;
+       left: 0;
+       display: flex;
+   }
+
+   .right > .table-b {
+       flex: 1;
+   }
+
+   .bottom-left-wrapper {
+       grid-column: 1;
+       grid-row: 2;
+       height: 100%;
+       width: 100%;
+       position: relative;
+       top: 0;
+       display: flex;
+   }
+
+   .rightbottom {
+       grid-column: 2;
+       grid-row: 2;
+       height: 100%;
+       width: 100%;
+       position: relative;
+       top: 0;
+       left: 0;
+       display: flex;
+   }
+
+   .rightbottom > .table-a {
+       flex: 1;
    }
    
    .verticalbox {
        height: 100%;
-       min-height: 18rem;
+       width: 100%;
+       display: flex;
+       align-items: center;
    }
    
    .table-a, .table-b, .table-c {
-       height: 100%;
-       width: 100%;
-       table-layout: fixed;
+       height: 100% !important;
+       width: 100% !important;
+       table-layout: fixed !important;
+       margin: 0 !important;
    }
    
    .table-a td, .table-b td, .table-c td {
        overflow: hidden;
        word-break: break-all;
+       box-sizing: border-box;
    }
    
    table, tr, td, th {
-       padding: 6px;
+       padding: 3px !important;
+       box-sizing: border-box;
+       margin: 0;
    }
    
    .titletext {
@@ -545,12 +602,13 @@ font-style: normal;
    }
    
    .verticaltext2 {
-       line-height: 16px;
-       letter-spacing: 0.8px;
-       font-size: 0.85rem;
+       line-height: 14px;
+       letter-spacing: 0.5px;
+       font-size: 0.75rem;
        width: 100%;
        height: 100%;
        word-break: keep-all;
+       padding: 5px;
    }
 
    .blacktitle {
@@ -576,6 +634,11 @@ font-style: normal;
    .rightbottom {
     overflow: hidden;
     box-sizing: border-box;
+   }
+
+   .leftbottom, .leftbottom2 {
+       box-sizing: border-box;
+       overflow: hidden;
    }
 
    .verticaltext {
