--- a/style.css
+++ b/style.css
@@ -466,7 +466,8 @@ font-style: normal;
    }
    
    .contentsblock {
-       margin: 1.3rem 0;
+       margin: 1rem 0;
+	   text-align: start;
    }
 
   .mobile-wrapper {
