--- a/style.css
+++ b/style.css
@@ -41,11 +41,27 @@ font-style: normal;
   -webkit-user-select: none; /* 사파리/크롬용 */
   -moz-user-select: none;    /* 파이어폭스용 */
   -ms-user-select: none;     /* IE/Edge용 */
+  overflow: hidden;
 }
 
-.contentsblock {
-margin: 2rem;
-margin-left: 3rem
+.navigation-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 30%;
+  height: 100vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+  z-index: 10;
+}
+
+/* 스크롤바 숨기기 */
+.navigation-wrapper::-webkit-scrollbar {
+  display: none;
+}
+.navigation-wrapper {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 h1 {
@@ -58,7 +74,7 @@ margin-bottom: 8rem;
 }
 
 .contentsblock {
-margin: 5rem;
+margin: 3rem;
 margin-left: 3rem
 }
 
@@ -72,7 +88,7 @@ margin-left: 3rem
 font-family: kozuka-mincho-pr6n, optique-display, serif;
 font-weight: 900;
 font-style: normal;
-font-size: 1.1rem;
+font-size: 1rem;
 writing-mode: vertical-rl;
 text-align: start;
 letter-spacing: 3px;
@@ -415,6 +431,13 @@ font-style: normal;
        overflow-x: hidden;
        width: 100%;
        overflow-y: auto;
+       overflow: auto;
+   }
+
+   .navigation-wrapper {
+       position: relative;
+       height: auto;
+       overflow: visible;
    }
 
    /* 폰트 로딩 중에도 레이아웃 유지 */
@@ -483,94 +506,37 @@ font-style: normal;
        top: auto;
        left: auto;
        transform: none;
-       width: 100vw;
-       max-width: 100vw;
-       height: 100vw * 1.7143; /* 28:48 비율 유지 */
-       max-height: calc(100vw * 1.7143);
+       width: 100%;
+       max-width: 28rem;
+       height: auto;
+       min-height: 48rem;
        margin: 1rem auto;
        margin-bottom: 7rem;
-       display: grid;
-       grid-template-columns: 50% 50%;
-       grid-template-rows: 50% 50%;
-       padding: 0;
    }
    
-   .left {
-       grid-column: 1;
-       grid-row: 1;
-       height: 100%;
-       width: 100%;
-       position: relative;
-       display: flex;
-   }
-
-   .left > .table-a {
-       flex: 1;
-   }
-
-   .right {
-       grid-column: 2;
-       grid-row: 1;
-       height: 100%;
-       width: 100%;
-       position: relative;
-       left: 0;
-       display: flex;
-   }
-
-   .right > .table-b {
-       flex: 1;
-   }
-
-   .bottom-left-wrapper {
-       grid-column: 1;
-       grid-row: 2;
-       height: 100%;
-       width: 100%;
-       position: relative;
-       top: 0;
-       display: flex;
-   }
-
-   .rightbottom {
-       grid-column: 2;
-       grid-row: 2;
-       height: 100%;
-       width: 100%;
-       position: relative;
-       top: 0;
-       left: 0;
-       display: flex;
-   }
-
-   .rightbottom > .table-a {
-       flex: 1;
+   .left, .right, .bottom-left-wrapper, .rightbottom {
+       height: 50%;
+       width: 50%;
    }
    
    .verticalbox {
        height: 100%;
-       width: 100%;
-       display: flex;
-       align-items: center;
+       min-height: 18rem;
    }
    
    .table-a, .table-b, .table-c {
-       height: 100% !important;
-       width: 100% !important;
-       table-layout: fixed !important;
-       margin: 0 !important;
+       height: 100%;
+       width: 100%;
+       table-layout: fixed;
    }
    
    .table-a td, .table-b td, .table-c td {
        overflow: hidden;
        word-break: break-all;
-       box-sizing: border-box;
    }
    
    table, tr, td, th {
-       padding: 3px !important;
-       box-sizing: border-box;
-       margin: 0;
+       padding: 6px;
    }
    
    .titletext {
@@ -579,13 +545,12 @@ font-style: normal;
    }
    
    .verticaltext2 {
-       line-height: 14px;
-       letter-spacing: 0.5px;
-       font-size: 0.75rem;
+       line-height: 16px;
+       letter-spacing: 0.8px;
+       font-size: 0.85rem;
        width: 100%;
        height: 100%;
        word-break: keep-all;
-       padding: 5px;
    }
 
    .blacktitle {
@@ -611,11 +576,6 @@ font-style: normal;
    .rightbottom {
     overflow: hidden;
     box-sizing: border-box;
-   }
-
-   .leftbottom, .leftbottom2 {
-       box-sizing: border-box;
-       overflow: hidden;
    }
 
    .verticaltext {
