--- a/style.css
+++ b/style.css
@@ -41,27 +41,6 @@ font-style: normal;
   -webkit-user-select: none; /* 사파리/크롬용 */
   -moz-user-select: none;    /* 파이어폭스용 */
   -ms-user-select: none;     /* IE/Edge용 */
-  overflow: hidden;
-}
-
-.navigation-wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 30%;
-  height: 100vh;
-  overflow-y: auto;
-  overflow-x: hidden;
-  z-index: 10;
-}
-
-/* 스크롤바 숨기기 */
-.navigation-wrapper::-webkit-scrollbar {
-  display: none;
-}
-.navigation-wrapper {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
 }
 
 h1 {
@@ -71,11 +50,13 @@ margin: 3rem;
 font-style: normal;
 font-size: 3rem;
 margin-bottom: 8rem;
+
 }
 
 .contentsblock {
-margin: 3rem;
+margin: 2rem;
 margin-left: 3rem
+
 }
 
 .logo-img {
@@ -88,10 +69,9 @@ margin-left: 3rem
 font-family: kozuka-mincho-pr6n, optique-display, serif;
 font-weight: 900;
 font-style: normal;
-font-size: 1rem;
+font-size: 1.0rem;
 writing-mode: vertical-rl;
 text-align: start;
-	justify-content: flex-start;
 letter-spacing: 3px;
 
 }
@@ -182,7 +162,7 @@ display: inline-block;
     table-layout: fixed;
     max-height: 100%;
     max-width: 100%;
-    border-collapse: collapse;
+    
 }
 
 .table-a {
@@ -432,23 +412,6 @@ font-style: normal;
        overflow-x: hidden;
        width: 100%;
        overflow-y: auto;
-       overflow: auto;
-   }
-
-   .navigation-wrapper {
-       position: relative;
-       height: auto;
-       overflow: visible;
-   }
-
-   /* 폰트 로딩 중에도 레이아웃 유지 */
-   html.wf-loading body {
-       visibility: hidden;
-   }
-   
-   html.wf-active body,
-   html.wf-inactive body {
-       visibility: visible;
    }
    
    h1 {
@@ -528,12 +491,10 @@ font-style: normal;
    .table-a, .table-b, .table-c {
        height: 100%;
        width: 100%;
-       table-layout: fixed;
    }
    
    .table-a td, .table-b td, .table-c td {
        overflow: hidden;
-       word-break: break-all;
    }
    
    table, tr, td, th {
@@ -549,9 +510,6 @@ font-style: normal;
        line-height: 16px;
        letter-spacing: 0.8px;
        font-size: 0.85rem;
-       width: 100%;
-       height: 100%;
-       word-break: keep-all;
    }
 
    .blacktitle {
@@ -616,20 +574,10 @@ font-style: normal;
     display: none;
    }
 
-   /* 폰트 로딩 전에 레이아웃 깨짐 방지 */
-   html.wf-loading .container { 
-       visibility: hidden; 
-   }
-   html.wf-active .container,
-   html.wf-inactive .container { 
-       visibility: visible; 
-   }
-
-   html.wf-loading .mobile-wrapper { 
-       visibility: hidden; 
-   }
-   html.wf-active .mobile-wrapper,
-   html.wf-inactive .mobile-wrapper { 
-       visibility: visible; 
-   }
+	html.wf-loading .mobile-wrapper { 
+  visibility: hidden; 
+}
+html.wf-active .mobile-wrapper { 
+  visibility: visible; 
+}
 }
