--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ font-weight: 900;
 font-style: normal;
 font-size: 1.0rem;
 writing-mode: vertical-rl;
-text-align: start;
+text-align: left;
 letter-spacing: 3px;
 
 }
