--- a/style.css
+++ b/style.css
@@ -425,6 +425,7 @@ font-style: normal;
        height: 3.5rem;
        width: 3.5rem;
        margin: 0 auto;
+	   margin-bottom: 3rem;
        object-fit: contain;
    }
    
