--- a/style.css
+++ b/style.css
@@ -36,6 +36,11 @@ font-style: normal;
   word-break: keep-all;
   color: var(--color-1);
   background-color: var(--color-2);
+  background-image: radial-gradient(
+    var(--color-1) 1px,  /* Adjusted dot color to be more subtle */
+    transparent 1px
+  );
+  background-size: 20px 20px;  /* Made dots slightly closer together */
   cursor: default;
     user-select: none;       /* 텍스트 선택 불가 */
   -webkit-user-select: none; /* 사파리/크롬용 */
