--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ font-style: normal;
   color: var(--color-1);
   background-color: var(--color-2);
   background-image: radial-gradient(
-    var(--color-1) 1px,  /* Adjusted dot color to be more subtle */
+    rgba(0, 0, 0, 0.2) 1px, 1px,  /* Adjusted dot color to be more subtle */
     transparent 1px
   );
   background-size: 20px 20px;  /* Made dots slightly closer together */
