--- a/style.css
+++ b/style.css
@@ -404,7 +404,7 @@ footer {
   margin-top: 100px;
   margin-bottom: 50px;
   text-align: center;
-  font-size: 12px;
+  font-size: 0.8rem;
   color:  var(--color-1);
 }
 
