--- a/style.css
+++ b/style.css
@@ -373,7 +373,8 @@ a.titletext:hover {
 }
 .cardlogo {
 margin: 1rem;
-font-size: 1.5rem;
+width: 1rem;
+height: 1rem;
 font-family: kozuka-mincho-pr6n, optique-display, serif;
 font-weight: 900;
 font-style: normal;
