--- a/style.css
+++ b/style.css
@@ -204,12 +204,12 @@ table, tr, td, th {
 td {
 
 }
-css.titlewhite, .titleblack {
-  height: 3rem;
-  position: relative; 
-  border: 0px;
-  text-align: center;
-  padding: 0;  /* 이거 추가 */
+.titlewhite, .titleblack {
+  height: 3rem;
+  position: relative; 
+  border: 0px;
+  text-align: center;
+  padding: 0;  /* 이거 추가 */
 }
 .titlewhite {
 	background-color: var(--color-1);
